Esquelo da pagina de automacao criado

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: A description about my blog homepage
+description: Tutorials and articles about computing 
 ---
 
 <div id="posts">
